don't cache chunks that make barebones scripts

--- a/training/Caching.qmd
+++ b/training/Caching.qmd
@@ -288,6 +288,7 @@ caching](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -296,6 +297,7 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
 
