--- a/training/ForestsAndFire.qmd
+++ b/training/ForestsAndFire.qmd
@@ -193,6 +193,7 @@ that the modules created.
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path(qmdPath, "R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -201,5 +202,6 @@ fileName <- file.path(qmdPath, "R/Chapter_scripts", sub("rmarkdown", "R", knitr:
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
