--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -538,6 +538,7 @@ module](https://spades-workshops.predictiveecology.org/articles/02c-Convert_R_co
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -546,6 +547,7 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
 
