--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -431,6 +431,7 @@ castorSim2 <- do.call(SpaDES.core::simInitAndSpades, out)
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path(qmdPath, "R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -439,6 +440,7 @@ fileName <- file.path(qmdPath, "R/Chapter_scripts", sub("rmarkdown", "R", knitr:
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
 
