--- a/training/debugging.qmd
+++ b/training/debugging.qmd
@@ -304,6 +304,7 @@ reprex](https://www.r-bloggers.com/2020/10/how-to-make-a-reprex/)
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -312,5 +313,6 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
