--- a/training/simList.qmd
+++ b/training/simList.qmd
@@ -323,6 +323,7 @@ objects(mySimOut)
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -331,6 +332,7 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
 
