--- a/training/ModulesAndEvents.qmd
+++ b/training/ModulesAndEvents.qmd
@@ -307,6 +307,7 @@ module](https://spades-workshops.predictiveecology.org/articles/02c-Convert_R_co
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -315,5 +316,6 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
