--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -225,6 +225,7 @@ accessors](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-events.html)
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -233,6 +234,7 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
 
