--- a/training/prepInputs.qmd
+++ b/training/prepInputs.qmd
@@ -330,6 +330,7 @@ used.
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -338,5 +339,6 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
