--- a/training/workflowSimple2.qmd
+++ b/training/workflowSimple2.qmd
@@ -151,6 +151,7 @@ SpaDES.core](https://spades-core.predictiveecology.org/reference/index.html)
 #| eval: true
 #| echo: false
 #| purl: false
+#| cache: false
 
 fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
 ```
@@ -159,5 +160,6 @@ fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_
 #| eval: false
 #| echo: true
 #| purl: false
+#| cache: false
 
 ```
