--- a/training/MetaDataAndModuleFiles.qmd
+++ b/training/MetaDataAndModuleFiles.qmd
@@ -37,8 +37,12 @@ knitr::knit_hooks$set(output = function(y, options) {
   }
   hook_output(y, options)
 })
-libPath <- ifelse(dir.exists("packages"), "packages", "training/packages") # if run interactively vs knited
-.libPaths(libPath)
+
+if (Sys.getenv("USERNAME") != "GHA") {
+  libPath <- ifelse(dir.exists("packages"), "packages", "training/packages") # if run interactively vs knited
+  .libPaths(libPath)
+}
+
 ```
 
 ## Continue example -- a linear model
@@ -112,7 +116,8 @@ coming from *outside* this module.
 ```{r}
 #| eval: true
 
-Require::Require(c("reproducible", "SpaDES.core"), repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
+Require::Require(c("reproducible", "SpaDES.core"), 
+                 repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
 
 # make a module
 modulePath <- "~/SpaDES_book/NewModuleIntro/NewModule"
@@ -268,10 +273,10 @@ function:
 -   **arguments** -- specifically `sim` can be used
 
 -   **something returned** -- in this case, the `simList`. `return(sim)`
-    must always be present - it is by default, but don't delete it!
-    
+must always be present - it is by default, but don't delete it!
+
 -   **it can be run**-- but don't worry about running it; SpaDES runs it
-    when it is time.
+when it is time.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
@@ -349,78 +354,78 @@ outputs that model, and plots the fit.
 ## Questions
 
 1.  What are some things we "gained" from putting our simple 3 lines of
-    code into a module?
+code into a module?
 
-    -   We can turn off plotting easily. Set `.plotInitialTime = NA` in the
-        `simInitAndSpades` call.
+-   We can turn off plotting easily. Set `.plotInitialTime = NA` in the
+`simInitAndSpades` call.
 
 2.  What are some things we "lost"?
 
-    -   More complicated. (overkill for these 3 lines?)
+-   More complicated. (overkill for these 3 lines?)
 
 3.  What if we used an R package that wasn't in the base packages list?
 
-    -   See
-        [`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
-        for all the metadata items. Specifically, see `reqdPkgs`.
+-   See
+[`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
+for all the metadata items. Specifically, see `reqdPkgs`.
 
 4.  What is the `sim`? See
-    [`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
+[`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
 
 ## Try on your own
 
 1.  Fill in the metadata from the Challenges you did in previous
-    chapter.
+chapter.
 
 2.  Look at the other elements of the metadata and cross reference them
-    with
-    [`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
+with
+[`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
 
 3.  Look at the `Rmd` file of one of the modules that has been built
-    (recall the message after you call `newModule`), where you have
-    filled in the metadata. Try to build it and look at the automatic
-    tables that get built from the metadata.
+(recall the message after you call `newModule`), where you have
+filled in the metadata. Try to build it and look at the automatic
+tables that get built from the metadata.
 
 ## Common mistakes
 
 Some common mistakes/bugs that module developers encounter:
 
 -   **Object doesn't exist/is NULL.** Errors like the ones below are usually the result of 
-    not providing default values for an input in the `simList` (via `.inputObjects()`),
-    the user/another module not providing values for that object, or forgetting to
-    assign an object to the `simList` (i.e. `sim$y <- <...>`)
-    See @sec-moduleinputs.
-    
-    ```
-    Error in model.frame.default(formula = y ~ sim$x, drop.unused.levels = TRUE) : 
-    invalid type (NULL) for variable 'sim$x'
-    
-    Error in eval(predvars, data, env) : object 'y' not found
-    ```
+not providing default values for an input in the `simList` (via `.inputObjects()`),
+the user/another module not providing values for that object, or forgetting to
+assign an object to the `simList` (i.e. `sim$y <- <...>`)
+See @sec-moduleinputs.
+
+```
+Error in model.frame.default(formula = y ~ sim$x, drop.unused.levels = TRUE) : 
+invalid type (NULL) for variable 'sim$x'
+
+Error in eval(predvars, data, env) : object 'y' not found
+```
 
 -   **Parsing errors.** These happen when `simInit` has issues reading the module
-    R script (or other associated scripts) and are usually easy to debug by reading
-    the error message. For instance, the one below indicates that lines 43, 44, have
-    a problem, which is a missing comma after the ")".
-    ```
-    Error in parse(filename) : 
-    C:<modulePath>/My_linear_model/My_linear_model.R:44:3: unexpected symbol
-    43:   )
-    44:   outputObjects
-      ^
-    ```
+R script (or other associated scripts) and are usually easy to debug by reading
+the error message. For instance, the one below indicates that lines 43, 44, have
+a problem, which is a missing comma after the ")".
+```
+Error in parse(filename) : 
+C:<modulePath>/My_linear_model/My_linear_model.R:44:3: unexpected symbol
+43:   )
+44:   outputObjects
+^
+```
 
 -   **Environment- and `simList`-related error.** If the `simList` (`sim`) is not
-    returned at the end of a function that takes it as an argument -- e.g. an event
-    function, the `.inputObjects()` function... -- it will either be lost or 
-    changed into something unexpected. Below are two examples of errors that may 
-    announce this problem.
-    ```
-    Error in <...>
-    sim must be a simList
-    
-    Error in as.environment(pos) : invalid 'pos' argument
-    ```
+returned at the end of a function that takes it as an argument -- e.g. an event
+function, the `.inputObjects()` function... -- it will either be lost or 
+changed into something unexpected. Below are two examples of errors that may 
+announce this problem.
+```
+Error in <...>
+sim must be a simList
+
+Error in as.environment(pos) : invalid 'pos' argument
+```
 
 ## See also
 
