--- a/workshops/Nov-2024-SpaDES-workshop.qmd
+++ b/workshops/Nov-2024-SpaDES-workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Robust and nimble scientific workflows, using SpaDES"
-description: "A multi-day workshop focusing on learning robust approaches to building reuseable, reproducible workflows for ecological applications"
+description: "A multi-day workshop focusing on learning robust approaches to building reuseable, reproducible workflows for Forest Degradation"
 date: last-modified
 image: https://besjournals.onlinelibrary.wiley.com/cms/asset/db13319c-88b4-4821-9eaa-a2e62364b399/mee314034-fig-0004-m.jpg
 categories:
@@ -16,13 +16,13 @@ editor:
 **Update**: links to presentation files have been added to the agenda.
 
 If you missed it, but would like to attend a future workshop, please reach out to [Eliot](../bios/community/aaaeliot.qmd) or
-[Ceres](../bios/community/aaaeliot.qmd) so that we can add you to the wait list.
+[Ian](../bios/professional/ian.qmd) so that we can add you to the wait list.
 
 ## Date: Nov 19 - 21, 2024
 
 ## Location: Pacific Forestry Centre
 
-This workshop will be in person. We will be 4 people who have worked with SpaDES and ecological models: [Eliot McIntire](../bios/community/aaaeliot.qmd), [Ian Eddy](../bios/ian.qmd), [Celine Boisvenue](../bios/community/celine.qmd), and [Camille Giuliano](../bios/camille.qmd).
+This workshop will be in person. We will be 4 people who have worked with SpaDES and ecological models: [Eliot McIntire](../bios/community/aaaeliot.qmd), [Ian Eddy](../bios/professional/ian.qmd), [Celine Boisvenue](../bios/community/celine.qmd), and [Camille Giuliano](../bios/professional/camille.qmd).
 
 ## Tentative Agenda
 
