--- a/training/spadesCBMDemo.qmd
+++ b/training/spadesCBMDemo.qmd
@@ -1,5 +1,5 @@
 ---
-author: 
+author: "Céline Boisvenue"
 date: last-modified
 editor_options:
   chunk_output_type: console
@@ -15,7 +15,7 @@ execute:
   eval: false
 ---
 
-# Forest Carbon Modelling spadesCBM and setupProject
+# Forest Carbon Modelling in SpaDES with setupProject
 
 ::: {.callout-tip appearance="simple"}
 See \[Barebones R script\] for the code shown in this chapter
@@ -54,10 +54,43 @@ if (Sys.getenv("USERNAME") == "GHA") {
 qmdPath <- normalizePath(getwd(), winslash = "/")
 
 if (!interactive()) { 
-  dir.create("~/SpaDES_book/LandRDemo_coreVeg", recursive = TRUE)
-  knitr::opts_knit$set(root.dir = "~/SpaDES_book/LandRDemo_coreVeg")
+  dir.create("~/SpaDES_book/spadesCBMDemo", recursive = TRUE)
+  knitr::opts_knit$set(root.dir = "~/SpaDES_book/spadesCBMDemo")
 }
 ```
+
+spadesCBM is a modular, transparent and spatially explicit implementation of the logic, pools structure, equations, and default assumptions of the Carbon Budget Model of the Canadian Forest Sector [CBM-CFS]
+(https://natural-resources.canada.ca/climate-change/climate-change-impacts-forests/carbon-accounting/carbon-budget-model/13107).
+It applies the science presented in @kurz2009 in a similar way to the
+simulations in @boisvenue2016 and @boisvenue2022 but calls Python
+functions for annual processes. These functions are, like much of
+modelling-based science, continuously under development.
+
+## spadesCBM Modules
+
+Four modules need to be run in tandem for a spadesCBM simulation (see section XX
+for how these relate in SpaDES). The first module *CBM_defaults* reads in
+defaults CBM-CFS parameters for Canada.  The second module *CBM_dataPrep_SK* is
+a data preparation SpaDES module, where input data and spatial layers are
+assembled and prepared for a specific study area (the *_SK* indicated the
+specific study area or scenario). In spadesCBM, as in CBM-CFS, growth curves are
+the main change-agent. The third module
+*CBM_vol2biomass* translates user-provided growth curves ($m^3/ha$) into increments for specific above ground carbon pools (metric tonnes of carbon/ha) with @boudewyn2007 models and a smoothing algorithm. These three modules provide the input to *CBM_core* module where where processes are applied on a yearly time step.
+This modularity enables users to access and change default parameters, change
+inputs, and assess the impact of these changes. We are working on some
+implementations of this modularity and making these available to the community.
+Hope others will do the same. A manual describing spadesCBM in detail is forthcoming. The link to the manual will be posted here.
+
+Several core utilities to spadesCBm are provided by the [`CBMutils`](https://github.com/PredictiveEcology/CBMutils) package, available on GitHub. Active development `CBMutils` and all `spadesCBM` modules is underway.
+
+## Setup
+
+```         
+insert needed chunk from the global
+```
+In this example, we will setup the workflow using `setupProject` from the
+[`SpaDES.project`](https://spades-project.predictiveecology.org/) package and
+current versions of the spadesCBM modules.
 
 ::: {#imp-gdrive .callout-important}
 ## Google account needed for this example
@@ -82,23 +115,7 @@ Make sure you give `tidyverse` read/write access to your files:
 ![](assets/img/gdriveauth.png){fig-align="center" width="467"}
 :::
 
-## Setup
 
-```         
-insert needed chunk from the global
-```
-
-### spadesCBM Modules
-
-spadesCBM runs using 4 distinct modules.
-
-#### CBM_defaults
-
-#### CBM_dataPrep_xx
-
-#### CBM_vol2biomass
-
-#### CBM_core
 
 ## Run Simulation
 
