--- a/training/spadesCBMDemo.qmd
+++ b/training/spadesCBMDemo.qmd
@@ -59,8 +59,7 @@ if (!interactive()) {
 }
 ```
 
-spadesCBM is a modular, transparent and spatially explicit implementation of the logic, pools structure, equations, and default assumptions of the Carbon Budget Model of the Canadian Forest Sector [CBM-CFS]
-(https://natural-resources.canada.ca/climate-change/climate-change-impacts-forests/carbon-accounting/carbon-budget-model/13107).
+spadesCBM is a modular, transparent, and spatially explicit implementation of the logic, pools structure, equations, and default assumptions of the Carbon Budget Model of the Canadian Forest Sector [CBM](https://natural-resources.canada.ca/climate-change/climate-change-impacts-forests/carbon-accounting/carbon-budget-model/13107).
 It applies the science presented in @kurz2009 in a similar way to the
 simulations in @boisvenue2016 and @boisvenue2022 but calls Python
 functions for annual processes. These functions are, like much of
@@ -70,27 +69,29 @@ modelling-based science, continuously under development.
 
 Four modules need to be run in tandem for a spadesCBM simulation (see section XX
 for how these relate in SpaDES). The first module *CBM_defaults* reads in
-defaults CBM-CFS parameters for Canada.  The second module *CBM_dataPrep_SK* is
+defaults CBM parameters for Canada.  The second module *CBM_dataPrep_SK* is
 a data preparation SpaDES module, where input data and spatial layers are
-assembled and prepared for a specific study area (the *_SK* indicated the
-specific study area or scenario). In spadesCBM, as in CBM-CFS, growth curves are
+assembled and prepared for a specific study area (the *SK*
+indicates the
+specific study area or scenario, in this case it is a small raster in Saskatchewan). In spadesCBM, as in CBM, growth curves are
 the main change-agent. The third module
-*CBM_vol2biomass* translates user-provided growth curves ($m^3/ha$) into increments for specific above ground carbon pools (metric tonnes of carbon/ha) with @boudewyn2007 models and a smoothing algorithm. These three modules provide the input to *CBM_core* module where where processes are applied on a yearly time step.
+*CBM_vol2biomass* translates user-provided growth curves ($m^3/ha$) into increments for specific above ground carbon pools (metric tonnes of carbon/ha) using @boudewyn2007 models to which we added a smoothing algorithm. These three modules provide the input to *CBM_core* module where processes are applied on a yearly time step.
 This modularity enables users to access and change default parameters, change
 inputs, and assess the impact of these changes. We are working on some
 implementations of this modularity and making these available to the community.
-Hope others will do the same. A manual describing spadesCBM in detail is forthcoming. The link to the manual will be posted here.
+We hope others will do the same. A manual describing spadesCBM in detail is forthcoming. The link to the manual will be posted here.
 
-Several core utilities to spadesCBm are provided by the [`CBMutils`](https://github.com/PredictiveEcology/CBMutils) package, available on GitHub. Active development `CBMutils` and all `spadesCBM` modules is underway.
+Several core utilities to spadesCBm are provided by the [`CBMutils`](https://github.com/PredictiveEcology/CBMutils@development) package, available on GitHub. Active development in `CBMutils` and all `spadesCBM` modules is underway.
 
 ## Setup
+
+In this example, we will setup the workflow using `setupProject` from the
+[`SpaDES.project`](https://spades-project.predictiveecology.org/) package and
+current versions of the spadesCBM modules.
 
 ```         
 insert needed chunk from the global
 ```
-In this example, we will setup the workflow using `setupProject` from the
-[`SpaDES.project`](https://spades-project.predictiveecology.org/) package and
-current versions of the spadesCBM modules.
 
 ::: {#imp-gdrive .callout-important}
 ## Google account needed for this example
@@ -123,9 +124,11 @@ Make sure you give `tidyverse` read/write access to your files:
 simPython <- do.call(SpaDES.core::simInitAndSpades, out)
 ```
 
-### Some examples/results
+### Inspect your simulation
 
-#### NPP
+
+
+### Looking at results
 
 ```         
 MasterR <- terra::unwrap(simPython$masterRaster)
@@ -149,7 +152,9 @@ quickPlot::Plot(plotMaster, new = TRUE,
                                 "\n Landscape average: ", round(overallAvgNpp, 3), "  MgC/ha/yr."))
 ```
 
-#### Total Carbon
+## Changing study area
+
+Changing study areas requires that all the inputs be available. In spadesCBM, that means growth curves where (i.e., which pixel) they apply, and what is the leading species for that stand, an age raster, an ecozone raster, and information about disturbances (i.e., disturbance rasters) for all the years of simulation. Since we have that information for the province of Saskatchewan, we can change the definition of the study area in our `setupProject` script.
 
 ## Barebones script
 ```
